--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
 	"sideEffects": false,
 	"scripts": {
 		"dev": "vite",
-		"build": "tsc && node ./scripts/build.mjs",
+		"build": "vite build",
 		"build:debug": "MF_DEBUG_BUILD=1 tsc && MF_DEBUG_BUILD=1 node ./scripts/build.mjs",
 		"test": "vitest --run",
 		"test:watch": "vitest",
 		"lint": "biome check .",
 		"lint:fix": "biome check --write .",
-		"format": "biome format --write ."
+		"format": "biome format --write .",
+		"pretest": "npm run -s build"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.25.0",
