--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@babel/plugin-transform-typescript": "^7.28.0",
 		"@biomejs/biome": "^2.1.4",
 		"@rollup/plugin-babel": "^6.0.4",
+		"@rollup/plugin-terser": "^0.4.4",
 		"@types/node": "^22.17.2",
 		"esbuild": "^0.25.9",
 		"jsdom": "^26.1.0",
