--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
 		"@types/node": "^22.17.2",
 		"esbuild": "^0.25.9",
 		"jsdom": "^26.1.0",
+		"magic-string": "^0.30.11",
 		"typescript": "~5.8.3",
 		"vite": "^7.1.2",
-		"vitest": "^3.2.4",
-		"magic-string": "^0.30.11"
+		"vitest": "^3.2.4"
+	},
+	"dependencies": {
+		"terser": "^5.43.1"
 	}
 }
