--- a/package.json
+++ b/package.json
@@ -4,6 +4,23 @@
 	"version": "0.0.0",
 	"type": "module",
 	"sideEffects": false,
+	"main": "./dist/manifold.cjs",
+	"module": "./dist/manifold.es.js",
+	"types": "./src/main.ts",
+	"unpkg": "./dist/manifold.umd.js",
+	"jsdelivr": "./dist/manifold.umd.js",
+	"browser": "./dist/manifold.es.js",
+	"exports": {
+		".": {
+			"types": "./src/main.ts",
+			"import": "./dist/manifold.es.js",
+			"require": "./dist/manifold.cjs",
+			"default": "./dist/manifold.es.js"
+		},
+		"./umd": {
+			"default": "./dist/manifold.umd.js"
+		}
+	},
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build && node ./minify.js",
