--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "manifold",
-	"private": true,
+	"name": "mfld",
+	"private": false,
 	"version": "0.0.0",
 	"type": "module",
 	"sideEffects": false,
