--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
 		"pretest": "npm run -s build"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^2.2.3",
-		"@types/node": "^24.3.1",
-		"esbuild": "^0.25.9",
+		"@biomejs/biome": "^2.2.4",
+		"@types/node": "^24.5.2",
+		"esbuild": "^0.25.10",
 		"jsdom": "^26.1.0",
+		"terser": "^5.44.0",
 		"typescript": "~5.9.2",
-		"vite": "^7.1.4",
-		"vitest": "^3.2.4",
-		"terser": "^5.44.0"
+		"vite": "^7.1.7",
+		"vitest": "^3.2.4"
 	}
 }
