--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
 	"name": "@jwrunge/manifold",
 	"version": "0.4.0",
+	"tsconfig": "tsconfig.json",
 	"description": "A lightweight, no-build reactive state and templating library for the modern web",
 	"license": "MIT",
 	"exports": "./src/main.ts",
@@ -11,9 +12,5 @@
 	"imports": {
 		"@std/assert": "jsr:@std/assert@^1.0.0"
 	},
-	"exclude": ["node_modules/", "dist/", ".github/"],
-	"compilerOptions": {
-		"lib": ["ES2022", "DOM", "DOM.Iterable"],
-		"strict": true
-	}
+	"exclude": ["node_modules/", "dist/", ".github/"]
 }
