--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "mfld",
+	"name": "@jwrunge/manifold",
 	"private": false,
 	"version": "0.4.15",
 	"type": "module",
@@ -23,6 +23,9 @@
 		"src/",
 		"README.md"
 	],
+	"publishConfig": {
+		"access": "public"
+	},
 	"keywords": [
 		"reactive",
 		"templating",
@@ -48,7 +51,7 @@
 	},
 	"scripts": {
 		"dev": "vite",
-		"build": "vite build && node ./minify.js && npm run -s build:dts",
+		"build": "vite build && node ./minify.js && npm run -s build:dts && node ./scripts/cleanup-dist.js",
 		"build:types": "tsc -p tsconfig.build.json",
 		"build:dts": "npm run -s build:types && api-extractor run --local",
 		"build:debug": "MF_DEBUG_BUILD=1 tsc && MF_DEBUG_BUILD=1 node ./scripts/build.mjs",
@@ -57,6 +60,7 @@
 		"lint": "biome check .",
 		"lint:fix": "biome check --write .",
 		"format": "biome format --write .",
+		"clean:dist-dts": "node ./scripts/cleanup-dist.js",
 		"pretest": "npm run -s build"
 	},
 	"devDependencies": {
