--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,38 +13,7 @@ concurrency:
     cancel-in-progress: true
 
 jobs:
-    lint:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v4
-
-            - name: Setup Node.js
-              uses: actions/setup-node@v4
-              with:
-                  node-version: 22
-                  cache: npm
-
-            - name: Install dependencies
-              run: npm ci --prefer-offline --no-audit || npm install
-
-            - name: Lint (Biome)
-              run: npm run lint
-
-    test:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v4
-
-            - name: Setup Node.js
-              uses: actions/setup-node@v4
-              with:
-                  node-version: 24
-                  cache: npm
-
-            - name: Install dependencies
-              run: npm ci --prefer-offline --no-audit || npm install
-
-            - name: Run tests (Vitest)
-              run: npm test --silent
+    run-checks:
+        uses: ./.github/workflows/checks.yml
+        with:
+            node-version: "24"
